--- a/README
+++ b/README
@@ -1,1 +1,38 @@
 my vimfiles, modded stuff for vim and self small stuff
+
+plugins:
+- autoclose
+	http://www.vim.org/scripts/script.php?script_id=2009
+- buffet
+	http://www.vim.org/scripts/script.php?script_id=3896
+	https://github.com/sandeepcr529/Buffet.vim
+- checksyntax
+	http://www.vim.org/scripts/script.php?script_id=1431
+	https://github.com/tomtom/checksyntax_vim
+- errormarker
+	http://www.vim.org/scripts/script.php?script_id=1861
+- idevdiff (simple diff buffer stuff)
+- idevtools (some handy functions)
+- jsfolding (derived from phpfolding)
+- manpageviewplugin
+- nerd_commenter
+	http://www.vim.org/scripts/script.php?script_id=1218
+	https://github.com/scrooloose/nerdcommenter
+- nerd_tree
+	http://www.vim.org/scripts/script.php?script_id=1658
+	https://github.com/scrooloose/nerdtree
+- nerd_tree ack (found in nerdtree_plugin)
+	http://www.vim.org/scripts/script.php?script_id=3357
+- php-doc
+	http://www.vim.org/scripts/script.php?script_id=1355
+- phpfolding
+	http://www.vim.org/scripts/script.php?script_id=1623
+- supertab
+	http://www.vim.org/scripts/script.php?script_id=1643
+	https://github.com/ervandew/supertab
+- tagbar
+	http://www.vim.org/scripts/script.php?script_id=3465
+	http://majutsushi.github.com/tagbar/
+
+the rest of the stuff is modified from the original
+syntax, indent, ...
