{g,}vimrc :: split off gvim stuff (some stuff is not working otherways in qvim)
Signed-off-by: BlackEagle <ike.devolder@gmail.com>

--- a/install
+++ b/install
@@ -4,5 +4,6 @@ if [ "$1" == "clean" ]; then
 	rm -rf ~/.vim
 fi
 cp -a ./vimrc ~/.vimrc
+cp -a ./gvimrc ~/.gvimrc
 [ ! -d ~/.vim ] && mkdir ~/.vim
 cp -a ./vimfiles/* ~/.vim/
