--- a/README
+++ b/README
@@ -32,6 +32,9 @@ plugins:
 - supertab
 	http://www.vim.org/scripts/script.php?script_id=1643
 	https://github.com/ervandew/supertab
+- tabular
+	http://www.vim.org/scripts/script.php?script_id=3464
+	https://github.com/godlygeek/tabular
 - tagbar
 	http://www.vim.org/scripts/script.php?script_id=3465
 	http://majutsushi.github.com/tagbar/
