add fugitive for git stuff
Signed-off-by: BlackEagle <ike.devolder@gmail.com>

--- a/README
+++ b/README
@@ -5,6 +5,9 @@ plugins:
 	http://www.vim.org/scripts/script.php?script_id=2009
 - bufferlist
 	http://www.vim.org/scripts/script.php?script_id=1325
+- fugitive
+	http://www.vim.org/scripts/script.php?script_id=2975
+	https://github.com/tpope/vim-fugitive
 - idevdiff (simple diff buffer stuff)
 - idevtools (some handy functions)
 - jsfolding (derived from phpfolding)
