install gocode if go exists and only use deoplete-go when go exists
Signed-off-by: BlackEagle <ike.devolder@gmail.com>

--- a/install
+++ b/install
@@ -32,6 +32,10 @@ done
 
 if [[ $developer -eq 1 ]]; then
 	startvimrc="vimrc-developer"
+
+    if which go > /dev/null 2>&1; then
+        go get -u github.com/stamblerre/gocode
+    fi
 fi
 
 if [[ $nvim -eq 1 ]]; then
